
minor changes

  - like update(), static now uses m$list, rather than m$call. This makes it
    usable in lapply or other functions.

bug fix
  - fix dates for Chinese New Year in 2015 and 2017 (#219)
  - outlier(): reverted workaround for problem with byte compiler in R 3.4.0,
    which has been fixed in R. Fixes incomplete outliers in view() and bug
    in identify. (#211, #212)

documentation
  - Article in Journal of Statistical Software as vignette
  - citation refering to publication in Journal of Statistical Software


1.6.1  2017-05-02
--------------------------------------------------------------------------------

enhancements

  - A second, more verbose run after a non-zero exit, to detect Fortran run time
    errors (https://github.com/christophsax/seasonal/issues/194)

bug fix
  - deal with new file in build 1.1.39 (macOS)
  - outlier(): workaround for problem with byte compiler in R 3.4.0
    https://github.com/christophsax/seasonal/issues/209
  - import.spc(): fixed parsing of explicitly specified NULL entries
    E.g., regression{aictest=()} results in now regression.aictest = NULL
    (https://github.com/christophsax/seasonal/issues/202)
  - series(), out(): fix if model was updated using update()
    (https://github.com/christophsax/seasonal/issues/191)
  - some X-13 notes were not shown in summary
    (https://github.com/christophsax/seasonal/issues/200)
  - static parsing error with change of regime
    (https://github.com/christophsax/seasonal/issues/205)


1.5.1  2017-02-12
--------------------------------------------------------------------------------

bug fix
  - removing 'udg' classification and as.data.frame() method from udg() output,
    because it messes up with several other functions.


1.5.0  2017-02-12
--------------------------------------------------------------------------------

defunct
  - inspect() is defunct, use view() instead. Shiny application code removed
    from package.

enhancements