@@ -11,6 +11,7 @@ bug fix
   - outlier(): reverted workaround for problem with byte compiler in R 3.4.0,
     which has been fixed in R. Fixes incomplete outliers in view() and bug
     in identify. (#211, #212)
+  - fix error in summary when no seasonal adjustment is requested (#226)
 
 documentation
   - Article in Journal of Statistical Software as vignette
